# linear-logic

./: Cargo.toml  ci.sh
.github/workflows/: ci.yml
src/: expr.rs  lib.rs  parse.rs  test.rs  triage.rs
src/ast/: atomic.rs  funky.rs  infix.rs  mod.rs  name.rs  nonbinary.rs  prefix.rs  simplified.rs  tree.rs  unsimplified.rs
